# sven

./: .dockerignore  .env.example  .gitattributes  .gitignore  .node-version  .secrets.baseline  .secrets.baseline.ci  .secrets.baseline.ci.stripped  .secrets.baseline.new  .secrets.baseline.stripped  .secrets.baseline.stripped_old  CHANGELOG.md  CODEX_RESUME_PROMPT.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  commitlint.config.cjs  diff-registry.txt  docker-compose.47dynamics-bridge.yml  docker-compose.dev.yml  docker-compose.gpu-fleet.yml  docker-compose.production.linux-vm.yml  docker-compose.production.yml  docker-compose.profiles.yml  docker-compose.sso-idp.yml  docker-compose.staging.linux-vm.yml  docker-compose.staging.yml  docker-compose.yml  fix-admin.sh  fix-map.sh  fix-n1.sh  fix_device_info.cjs  fix_device_info2.cjs  flake.nix  migration-drill-scope.json  (+11 more)
.Jules/: palette.md
.github/: dependabot.yml  pull_request_template.md
.jules/: bolt.md
apps/: README.md
apps/companion-desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion-desktop-tauri/src-tauri/capabilities/: default.json
apps/companion-desktop-tauri/src-tauri/src/: main.rs
config/: loki-config.yml  otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml  promtail-config.yml  promtail-remote.yml
docs/: ARCHITECTURE.md  CURRENT_FEATURES_AND_SETUP.md  KEY_ROTATION.md  NEXT_IDEAS_MASTER_CHECKLIST.md  PATTERN_MODULE_INTEGRATION_PLAN.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  SVEN_APP_CHECKLIST.md  (+5 more)
(+7933 files in other folders)
